--- a/templates/app_entity_person/index.html.twig
+++ b/templates/app_entity_person/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>AppEntityPerson index</h1>
 
-    <table class="table">
+    <table class="table dataTable">
         <thead>
             <tr>
                 <th>Id</th>
@@ -38,4 +38,10 @@
     </table>
 
     <a href="{{ path('app_entity_person_new') }}">Create new</a>
+    <script>
+        $(document).ready(function() {
+            $('.dataTable').DataTable();
+        } );
+    </script>
 {% endblock %}
+
