--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,10 +7,17 @@
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
+            <link rel='stylesheet' href="{{ asset('css/datatables.min.css')}}"/>
+            <link rel='stylesheet' href="{{ asset('css/bootstrap.min.css')}}"/>
+            <link rel='stylesheet' href="{{ asset('css/bootstrap-theme.min.css')}}"/>
+            <link rel='stylesheet' href="{{ asset('css/bootstrap.min.css.map')}}"/>
+            <link rel='stylesheet' href="{{ asset('css/bootstrap-theme.min.css.map')}}"/>
         {% endblock %}
 
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
+            <script type='text/javascript' src='{{ asset('js/datatables.min.js')}}'></script>
+            <script type='text/javascript' src='{{ asset('js/bootstrap.min.js')}}'></script>
         {% endblock %}
     </head>
     <body>
