--- a/templates/app_entity_person/index.html.twig
+++ b/templates/app_entity_person/index.html.twig
@@ -3,45 +3,114 @@
 {% block title %}AppEntityPerson index{% endblock %}
 
 {% block body %}
-    <h1>AppEntityPerson index</h1>
+    <div class=row">
+        <div class="col-md-12" style="margin-top: 20px;">
+            <div class="panel panel-primary">
+                <div class="panel-heading">
+                    Personas
+                    <div class="options  pull-right">
+                        <a href="{{ path('app_entity_person_new') }}" class="tooltips"
+                           data-toggle="tooltip" data-placement="left" title="Crear Persona">
+                            <i class="fas fa-lg fa-plus btn-warning"></i>
+                        </a>
+                        <a href="javascript:;" class="panel-collapse"><i class="fa fa-chevron-down"></i></a>
+                    </div>
+                </div>
+                <div class="panel-body">
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered responsive table-hover" id="table"
+                               cellspacing="0"
+                               width="100%">
+                            <thead>
+                            <tr>
+                                <th>
+                                    Nombre
+                                </th>
+                                <th>
+                                    Apellidos
+                                </th>
+                                <th>
+                                    CI
+                                </th>
+                                <th>
+                                    Direccion
+                                </th>
+                                <th></th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for app_entity_person in app_entity_people %}
+                                <tr>
+                                    <td>{{ app_entity_person.name }}</td>
+                                    <td>{{ app_entity_person.lastname }}</td>
+                                    <td>{{ app_entity_person.ci }}</td>
+                                    <td>{{ app_entity_person.address }}</td>
+                                    <td>
+                                        <a href="{{ path('app_entity_person_edit', {'id': app_entity_person.id}) }}">
+                                            <i class="fa fa-lg fa-edit"></i>
+                                        </a>
+                                        <a onclick="deletePerson({{ app_entity_person.id}}, '{{ csrf_token('delete' ~ app_entity_person.id) }}')" style="cursor: pointer;">
+                                            <i class="fas fa-lg fa-trash" style="color: red"></i>
 
-    <table class="table dataTable">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Lastname</th>
-                <th>Ci</th>
-                <th>Address</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for app_entity_person in app_entity_people %}
-            <tr>
-                <td>{{ app_entity_person.id }}</td>
-                <td>{{ app_entity_person.name }}</td>
-                <td>{{ app_entity_person.lastname }}</td>
-                <td>{{ app_entity_person.ci }}</td>
-                <td>{{ app_entity_person.address }}</td>
-                <td>
-                    <a href="{{ path('app_entity_person_show', {'id': app_entity_person.id}) }}">show</a>
-                    <a href="{{ path('app_entity_person_edit', {'id': app_entity_person.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="6">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+                                        </a>
+                                    </td>
+                                </tr>
+                            {% else %}
+                                <tr>
+                                    <td colspan="6">no records found</td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <a href="{{ path('app_entity_person_new') }}">Create new</a>
+    <div id="div_person_delete"></div>
     <script>
-        $(document).ready(function() {
-            $('.dataTable').DataTable();
-        } );
+        $(document).ready(function () {
+            $('.dataTable').DataTable()
+        })
+
+        function deletePerson(id, token) {
+            let modal_delete = ''
+            modal_delete += '<div class="modal fade" id="person_delete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">'
+            modal_delete += '   <div class="modal-dialog">'
+            modal_delete += '       <div class="modal-content">'
+            modal_delete += '           <div class="modal-header">'
+            modal_delete += '               <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>'
+            modal_delete += '               <h4 class="modal-title">'
+            modal_delete += '                   Eliminar Persona'
+            modal_delete += '               </h4>'
+            modal_delete += '           </div>'
+            modal_delete += '           <div class="modal-body">'
+            modal_delete += '               <form method="post" action="/app/entity/person/"'
+            modal_delete += id
+            modal_delete += '>'
+            modal_delete += '                   <input type="hidden" name="_token" value="'
+            modal_delete += token
+            modal_delete += '">'
+            modal_delete += '                   Esta seguro que desea eliminar este elemento?'
+            modal_delete += '               <div class="modal-footer">'
+            modal_delete += '                   <button type="button" class="btn btn-default" data-dismiss="modal">'
+            modal_delete += '                       Cerrar'
+            modal_delete += '                   </button>'
+            modal_delete += '                   <a type="button" class="btn btn-danger" href="/app/entity/person/"'
+            modal_delete += id
+            modal_delete += '>'
+            modal_delete += '                       Eliminar'
+            modal_delete += '                   </a>'
+            modal_delete += '               </div>'
+            modal_delete += '           </div>'
+            modal_delete += '       </div>'
+            modal_delete += '   </div>'
+            modal_delete += '</div>'
+            // $('#div_person_delete').html(modal_delete)
+            // $('#person_delete').modal('show');
+
+        }
     </script>
 {% endblock %}
 
