--- a/templates/app_entity_person/new.html.twig
+++ b/templates/app_entity_person/new.html.twig
@@ -1,11 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New AppEntityPerson{% endblock %}
+{% block title %}
+ Crear Persona
+{% endblock %}
 
 {% block body %}
-    <h1>Create new AppEntityPerson</h1>
-
+    <h3>
+        Crear Persona
+    </h3>
+    {% set type = 'new' %}
     {{ include('app_entity_person/_form.html.twig') }}
 
-    <a href="{{ path('app_entity_person_index') }}">back to list</a>
 {% endblock %}
