--- a/templates/app_entity_person/_form.html.twig
+++ b/templates/app_entity_person/_form.html.twig
@@ -2,6 +2,16 @@
 <div class="my-custom-class-for-errors">
     {{ form_errors(form) }}
 </div>
+{% if errors != '' %}
+    <div class="alert alert-danger" role="alert">
+        Errores:
+        <ul>
+            {% for error in errors %}
+                <li>{{ error.message }}</li>
+            {% endfor %}
+        </ul>
+    </div>
+{% endif %}
 <div class="panel-body">
     <div class="form-group col-md-12">
         <div class="col-md-1">
