--- a/templates/app_entity_person/_form.html.twig
+++ b/templates/app_entity_person/_form.html.twig
@@ -50,7 +50,7 @@
     <div class="row">
         <div class="col-sm-6 pull-left">
             <div class="btn-toolbar">
-                <a class="btn-default btn" href="{{ path('app_entity_person_index') }}">
+                <a class="btn-default btn" href="{{ path('person_index') }}">
                     <i class="fa fa-lg fa-arrow-left"></i>
                     Lista de Personas
                 </a>
