--- a/templates/app_entity_person/_delete_form.html.twig
+++ b/templates/app_entity_person/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_entity_person_delete', {'id': app_entity_person.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('person_delete', {'id': app_entity_person.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ app_entity_person.id) }}">
     <button class="btn">Delete</button>
 </form>
