--- a/templates/app_entity_person/show.html.twig
+++ b/templates/app_entity_person/show.html.twig
@@ -30,9 +30,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_entity_person_index') }}">back to list</a>
+    <a href="{{ path('person_index') }}">back to list</a>
 
-    <a href="{{ path('app_entity_person_edit', {'id': app_entity_person.id}) }}">edit</a>
+    <a href="{{ path('person_edit', {'id': app_entity_person.id}) }}">edit</a>
 
     {{ include('app_entity_person/_delete_form.html.twig') }}
 {% endblock %}
